--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -62,9 +62,9 @@ permalink: /travel/
 
 <div class="slider">
     <div class="slides">
-        <div class="slide"><img src="images/travel/sichuan1.jpg" alt="Sichuan"></div>
-        <div class="slide"><img src="images/travel/hunan1.jpg" alt="Hunan"></div>
-        <div class="slide"><img src="images/travel/beijing1.jpg" alt="Beijing"></div>
+        <div class="slide"><img src="../images/travel/jiuzhaigou1.jpg" alt="Sichuan"></div>
+        <div class="slide"><img src="../images/travel/hunan1.jpg" alt="Hunan"></div>
+        <div class="slide"><img src="../images/travel/beijing.jpg" alt="Beijing"></div>
     </div>
 </div>
 
