--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -1,113 +1,19 @@
 ---
-layout: page
-author_profile: true
-title: "Travel Experience"
+layout: archive
 permalink: /travel/
+title: "travel"
+author_profile: true
+redirect_from:
+  - /wordpress/travel/
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Experience</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-        .slider {
-            position: relative;
-            max-width: 600px;
-            margin: auto;
-            overflow: hidden;
-            border-radius: 10px;
-        }
-        .slides {
-            display: flex;
-            transition: transform 0.5s ease-in-out;
-        }
-        .slide {
-            min-width: 100%;
-        }
-        img {
-            width: 100%;
-            border-radius: 10px;
-        }
-        .date-icon {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            margin-right: 8px;
-            background-color: #008CBA;
-            border-radius: 50%;
-        }
-        .travel-entry {
-            display: flex;
-            align-items: center;
-            margin: 10px 0;
-        }
-    </style>
-</head>
-<body>
-
-<h1>Travel Experience</h1>
-
-<h2>2024 Winter Vacation</h2>
-
-<div class="slider">
-    <div class="slides">
-        <div class="slide"><img src="../images/travel/jiuzhaigou1.jpg" alt="Sichuan"></div>
-        <div class="slide"><img src="../images/travel/hunan1.jpg" alt="Hunan"></div>
-        <div class="slide"><img src="../images/travel/beijing.jpg" alt="Beijing"></div>
-    </div>
-</div>
-
-<h2>我的旅行地</h2>
-
-<div class="travel-entry">
-    <div class="date-icon"></div>
-    <div>
-        <h3>四川</h3>
-        <p>在四川，我品尝了正宗的川菜，参观了大熊猫基地，体验了独特的文化。</p>
-    </div>
-</div>
-
-<div class="travel-entry">
-    <div class="date-icon"></div>
-    <div>
-        <h3>湖南</h3>
-        <p>湖南的山水画廊让我叹为观止，尤其是张家界的奇山异水，给我留下深刻的印象。</p>
-    </div>
-</div>
-
-<div class="travel-entry">
-    <div class="date-icon"></div>
-    <div>
-        <h3>北京</h3>
-        <p>在北京，我游览了故宫和长城，感受了历史的厚重。</p>
-    </div>
-</div>
-
-<script>
-    let index = 0;
-    const slides = document.querySelector('.slides');
-    const totalSlides = document.querySelectorAll('.slide').length;
-
-    function showSlide() {
-        index++;
-        if (index >= totalSlides) index = 0;
-        slides.style.transform = `translateX(-${index * 100}%)`;
-    }
-
-    setInterval(showSlide, 3000); // 每3秒切换
-</script>
-
-</body>
-</html>
+{% include base_path %}
+{% capture written_year %}'None'{% endcapture %}
+{% for post in site.posts %}
+  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+  {% if year != written_year %}
+    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
+    {% capture written_year %}{{ year }}{% endcapture %}
+  {% endif %}
+  {% include archive-single.html %}
+{% endfor %}
