--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -1,7 +1,10 @@
 ---
-layout: page
-title: "Travel"
+layout: archive
 permalink: /travel/
+title: "Travel Experience"
+author_profile: true
+redirect_from:
+  - /wordpress/travel/
 ---
 
 <!DOCTYPE html>
