--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -7,6 +7,7 @@ redirect_from:
   - /wordpress/travel/
 ---
 
+<!-- 顶部间距的容器 -->
 <div class="travel-content">
     <div class="travel-section">
         <div class="section-title">2024 Winter Vacation</div>
@@ -51,9 +52,9 @@ redirect_from:
 </script>
 
 <style>
-    /* 顶部间距 */
+    /* 为标题添加顶部填充，使其下移 */
     .travel-content {
-        margin-top: 80px; /* 根据需要调整顶部间距，确保标题不被遮挡 */
+        padding-top: 100px; /* 确保标题向下移动，避免被遮挡 */
     }
 
     body {
