--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -7,7 +7,6 @@ redirect_from:
   - /wordpress/travel/
 ---
 
-<!-- 顶部间距的容器 -->
 <div class="travel-content">
     <div class="travel-section">
         <div class="section-title">2024 Winter Vacation</div>
@@ -52,9 +51,9 @@ redirect_from:
 </script>
 
 <style>
-    /* 为标题添加顶部填充，使其下移 */
-    .travel-content {
-        padding-top: 100px; /* 确保标题向下移动，避免被遮挡 */
+    /* 定位到标题的样式，并添加顶部间距 */
+    .page__title {
+        padding-top: 100px; /* 根据需要调整顶部间距 */
     }
 
     body {
