--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -39,21 +39,22 @@ redirect_from:
 
 <script>
     // JavaScript for individual sliders
-    document.querySelectorAll('.slides').forEach(slider => {
+    document.querySelectorAll('.slider').forEach(sliderContainer => {
+        const slides = sliderContainer.querySelector('.slides');
         let index = 0;
-        const totalSlides = slider.children.length;
+        const totalSlides = slides.children.length;
 
         setInterval(() => {
             index = (index + 1) % totalSlides;
-            slider.style.transform = `translateX(-${index * 100}%)`;
+            slides.style.transform = `translateX(-${index * 100}%)`;
         }, 3000); // 每3秒切换
     });
 </script>
 
 <style>
-    /* 定位到标题的样式，并添加顶部间距 */
+    /* 为标题添加顶部填充，使其下移 */
     .page__title {
-        padding-top: 100px; /* 根据需要调整顶部间距 */
+        padding-top: 50px; /* 确保标题向下移动，避免被遮挡 */
     }
 
     body {
@@ -69,8 +70,9 @@ redirect_from:
         margin-left: 0;
     }
 
+    /* 调整 section-title 的字体大小 */
     .section-title {
-        font-size: 1.5em;
+        font-size: 1.2em; /* 将字体缩小为 1.2em */
         font-weight: bold;
         color: #555;
         margin-bottom: 5px;
@@ -103,6 +105,7 @@ redirect_from:
 
     .slide {
         min-width: 100%;
+        box-sizing: border-box;
     }
 
     img {
