--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -38,17 +38,18 @@ redirect_from:
 </div>
 
 <script>
-    // JavaScript for individual sliders
-    document.querySelectorAll('.slider').forEach(sliderContainer => {
-        const slides = sliderContainer.querySelector('.slides');
-        let index = 0;
-        const totalSlides = slides.children.length;
-
-        setInterval(() => {
-            index = (index + 1) % totalSlides;
-            slides.style.transform = `translateX(-${index * 100}%)`;
-        }, 3000); // 每3秒切换
-    });
+	document.querySelectorAll('.slider').forEach(sliderContainer => {
+		const slides = sliderContainer.querySelector('.slides');
+		let index = 0;
+		const totalSlides = slides.children.length;
+	
+		setInterval(() => {
+			index = (index + 1) % totalSlides;
+			slides.style.transform = `translateX(-${index * 100}%)`;
+			console.log(`Current index: ${index}`); // 输出当前显示的图片索引，帮助调试
+		}, 3000); // 每3秒切换
+	});
+	
 </script>
 
 <style>
@@ -90,26 +91,27 @@ redirect_from:
         margin: 20px 0;
     }
 
-    .slider {
-        position: relative;
-        width: 100%; /* 设置宽度为100%以适应父容器 */
-        overflow: hidden;
-        border-radius: 10px;
-        margin-left: 0; /* 左对齐 */
-    }
-
-    .slides {
-        display: flex;
-        transition: transform 0.5s ease-in-out;
-    }
-
-    .slide {
-        min-width: 100%;
-        box-sizing: border-box;
-    }
-
-    img {
-        width: 100%;
-        border-radius: 10px;
-    }
+	.slider {
+		position: relative;
+		width: 100%; /* 适应父容器宽度 */
+		overflow: hidden; /* 隐藏超出部分 */
+		border-radius: 10px;
+		margin-left: 0;
+	}
+	
+	.slides {
+		display: flex; /* 水平排列子元素 */
+		transition: transform 0.5s ease-in-out; /* 添加平滑过渡 */
+	}
+	
+	.slide {
+		min-width: 100%; /* 每张图片占据100%的宽度 */
+		box-sizing: border-box;
+	}
+	
+	img {
+		width: 100%; /* 图片宽度填充整个容器 */
+		border-radius: 10px;
+	}
+	
 </style>
