--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -49,6 +49,8 @@ redirect_from:
 			console.log(`Current index: ${index}`); // 输出当前显示的图片索引，帮助调试
 		}, 3000); // 每3秒切换
 	});
+	console.log(`Current index: ${index}`); // 输出当前显示的图片索引，帮助调试
+
 	
 </script>
 
