--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -12,7 +12,7 @@ redirect_from:
         <div class="section-title">2024 Winter Vacation</div>
         <div class="section-date">January 2024</div>
         <div class="divider"></div>
-        <p>Sichuan Jiuzhaigou 🌐</p>
+        <p>Sichuan Jiuzhaigou/museum </p>
         
         <!-- 图片网格容器 -->
         <div class="image-grid">
@@ -21,16 +21,24 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/jiuzhaigou3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
-        <p>Beijing 🌐</p>
+		<div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/jiuzhaigou4.jpg" alt="Sichuan Jiuzhaigou 1"></div>
+            <div class="grid-item"><img src="../images/travel/museum1.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/museum2.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+        </div>
+
+        <p>Beijing </p>
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/beijing1.jpg" alt="Beijing 1"></div>
             <div class="grid-item"><img src="../images/travel/beijing2.jpg" alt="Beijing 2"></div>
+			<div class="grid-item"><img src="../images/travel/beijing3.jpg" alt="Beijing 2"></div>
         </div>
 
-        <p>Hunan 🌐</p>
+        <p>Hunan </p>
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/hunan1.jpg" alt="Hunan 1"></div>
             <div class="grid-item"><img src="../images/travel/hunan2.jpg" alt="Hunan 2"></div>
+			<div class="grid-item"><img src="../images/travel/hunan3.jpg" alt="Hunan 2"></div>
         </div>
     </div>
 </div>
