--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -9,6 +9,42 @@ redirect_from:
 
 <div class="travel-content">
     <div class="travel-section">
+        <div class="section-title">2024 Summer Vacation</div>
+		<div class="section-date">June-July 2024</div>
+        <div class="divider"></div>
+		<p>Tsinghua University cs Summer Camp  </p>			
+
+        <div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/thu1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
+            <div class="grid-item"><img src="../images/travel/thu2.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/thu3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+        </div>
+
+		<p>Renmin University of China School of <b>Information/Gaoling School of Artificial Intelligence</b> Summer Camp  </p>			
+
+        <div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/ruc1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
+            <div class="grid-item"><img src="../images/travel/ruc2.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/ruc3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+        </div>
+
+		<p>Shanghai Jiaotong University cs Summer Camp  </p>			
+
+        <div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/ruc1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
+            <div class="grid-item"><img src="../images/travel/ruc2.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/ruc3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+        </div>
+
+		<p>shenzhen/hitsz </p>			
+
+        <div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/ruc1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
+            <div class="grid-item"><img src="../images/travel/ruc2.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/ruc3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+        </div>
+
+
         <div class="section-title">2024 Winter Vacation</div>
         <div class="section-date">January 2024</div>
         <div class="divider"></div>
