--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -12,7 +12,7 @@ redirect_from:
         <div class="section-title">2024 Summer Vacation</div>
 		<div class="section-date">June-July 2024</div>
         <div class="divider"></div>
-		<p>Tsinghua University cs Summer Camp  </p>			
+		<p>1.Tsinghua University cs Summer Camp  </p>			
 
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/thu1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
@@ -20,7 +20,7 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/thu3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
-		<p>Renmin University of China School of <b>Information/Gaoling School of Artificial Intelligence</b> Summer Camp  </p>			
+		<p>2.Renmin University of China School of <b>Information/Gaoling School of Artificial Intelligence</b> Summer Camp  </p>			
 
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/ruc1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
@@ -28,12 +28,12 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/ruc3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
-		<p>Shanghai Jiaotong University cs Summer Camp  </p>			
+		<p>3.Shanghai Jiaotong University cs Summer Camp  </p>			
 
         <div class="image-grid">
-            <div class="grid-item"><img src="../images/travel/ruc1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
-            <div class="grid-item"><img src="../images/travel/ruc2.jpg" alt="Sichuan Jiuzhaigou 2"></div>
-            <div class="grid-item"><img src="../images/travel/ruc3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+            <div class="grid-item"><img src="../images/travel/sjtu1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
+            <div class="grid-item"><img src="../images/travel/sjtu2.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/sjtu3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
 		<p>shenzhen/hitsz </p>			
@@ -59,8 +59,8 @@ redirect_from:
 
 		<div class="image-grid">
             <div class="grid-item"><img src="../images/travel/jiuzhaigou4.jpg" alt="Sichuan Jiuzhaigou 1"></div>
-            <div class="grid-item"><img src="../images/travel/museum1.jpg" alt="Sichuan Jiuzhaigou 2"></div>
-            <div class="grid-item"><img src="../images/travel/museum2.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+            <div class="grid-item"><img src="../images/travel/sichuan1.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/sichuan2.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
         <p>Beijing </p>
