--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -36,19 +36,19 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/sjtu3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
-		<p>shenzhen/hitsz </p>			
+		<p>4.shenzhen/hitsz </p>			
 
         <div class="image-grid">
-            <div class="grid-item"><img src="../images/travel/ruc1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
-            <div class="grid-item"><img src="../images/travel/ruc2.jpg" alt="Sichuan Jiuzhaigou 2"></div>
-            <div class="grid-item"><img src="../images/travel/ruc3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+            <div class="grid-item"><img src="../images/travel/sz1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
+            <div class="grid-item"><img src="../images/travel/sz2.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/sz3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
 
         <div class="section-title">2024 Winter Vacation</div>
         <div class="section-date">January 2024</div>
         <div class="divider"></div>
-        <p>Sichuan Jiuzhaigou/museum </p>
+        <p>1.Sichuan</p>
         
         <!-- 图片网格容器 -->
         <div class="image-grid">
@@ -63,14 +63,14 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/sichuan2.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
-        <p>Beijing </p>
+        <p>2.Beijing </p>
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/beijing1.jpg" alt="Beijing 1"></div>
             <div class="grid-item"><img src="../images/travel/beijing2.jpg" alt="Beijing 2"></div>
 			<div class="grid-item"><img src="../images/travel/beijing3.jpg" alt="Beijing 2"></div>
         </div>
 
-        <p>Hunan </p>
+        <p>3.Hunan </p>
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/hunan1.jpg" alt="Hunan 1"></div>
             <div class="grid-item"><img src="../images/travel/hunan2.jpg" alt="Hunan 2"></div>
