--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -12,7 +12,7 @@ redirect_from:
         <div class="section-title">2024 Summer Vacation</div>
 		<div class="section-date">June-July 2024</div>
         <div class="divider"></div>
-		<p>1.Tsinghua University cs Summer Camp  </p>			
+		<p>1.Tsinghua University CS Summer Camp  </p>			
 
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/thu1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
@@ -28,7 +28,7 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/ruc3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
-		<p>3.Shanghai Jiaotong University cs Summer Camp  </p>			
+		<p>3.Shanghai Jiaotong University CS Summer Camp  </p>			
 
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/sjtu1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
