--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -44,6 +44,14 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/sz3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
+		<p>5.Junhua, zhejiang </p>			
+
+        <div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/jihua.jpg" alt="Sichuan Jiuzhaigou 1"></div>
+            <div class="grid-item"><img src="../images/travel/jihua1.jpg" alt="Sichuan Jiuzhaigou 2"></div>
+            <div class="grid-item"><img src="../images/travel/jihua2.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+        </div>
+
 
         <div class="section-title">2024 Winter Vacation</div>
         <div class="section-date">January 2024</div>
