--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -36,7 +36,7 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/sjtu3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
-		<p>4.Shenzhen/hitsz </p>			
+		<p>4.Shenzhen/HITSZ </p>			
 
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/sz1.jpg" alt="Sichuan Jiuzhaigou 1"></div>
