--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -67,8 +67,8 @@ redirect_from:
 
 		<div class="image-grid">
             <div class="grid-item"><img src="../images/travel/jiuzhaigou4.jpg" alt="Sichuan Jiuzhaigou 1"></div>
-            <div class="grid-item"><img src="../images/travel/sichuan1.jpg" alt="Sichuan Jiuzhaigou 2"></div>
-            <div class="grid-item"><img src="../images/travel/sichuan2.jpg" alt="Sichuan Jiuzhaigou 3"></div>
+            <div class="grid-item"><img src="../images/travel/sichuan1.jpg" alt="Sichuan1"></div>
+            <div class="grid-item"><img src="../images/travel/sichuan2.jpg" alt="Sichuan2"></div>
         </div>
 
         <p>2.Beijing </p>
@@ -83,6 +83,30 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/hunan1.jpg" alt="Hunan 1"></div>
             <div class="grid-item"><img src="../images/travel/hunan2.jpg" alt="Hunan 2"></div>
 			<div class="grid-item"><img src="../images/travel/hunan3.jpg" alt="Hunan 2"></div>
+        </div>
+
+		<div class="section-title">2023 Summer Vacation</div>
+        <div class="section-date">July 2023</div>
+        <div class="divider"></div>
+        <p>1.Nanjing University Cloud scientific examination project on artificial intelligence technology application driven by both Chinese and British data knowledge</p>
+		<div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/nju1.jpg" alt="nju 1"></div>
+            <div class="grid-item"><img src="../images/travel/nju2.jpg" alt="nju 2"></div>
+			<div class="grid-item"><img src="../images/travel/nju4.jpg" alt="nju 2"></div>
+        </div>
+
+		<p>2.Huawei/Chinese Academy of Sciences Suzhou</p>
+		<div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/huawei1.jpg" alt="huawei 1"></div>
+            <div class="grid-item"><img src="../images/travel/suzhou1.jpg" alt="suzhou 2"></div>
+			<div class="grid-item"><img src="../images/travel/suzhou2.jpg" alt="suzhou 2"></div>
+        </div>
+
+		<p>3.Shanghai/Fudan University</p>
+		<div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/fd1.jpg" alt="fd 1"></div>
+            <div class="grid-item"><img src="../images/travel/fd2.jpg" alt="fd 2"></div>
+			<div class="grid-item"><img src="../images/travel/fd3.jpg" alt="fd 3"></div>
         </div>
     </div>
 </div>
