--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -44,7 +44,7 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/sz3.jpg" alt="Sichuan Jiuzhaigou 3"></div>
         </div>
 
-		<p>5.Junhua, zhejiang </p>			
+		<p>5.Jinhua, zhejiang </p>			
 
         <div class="image-grid">
             <div class="grid-item"><img src="../images/travel/jihua.jpg" alt="Sichuan Jiuzhaigou 1"></div>
@@ -88,6 +88,7 @@ redirect_from:
 		<div class="section-title">2023 Summer Vacation</div>
         <div class="section-date">July 2023</div>
         <div class="divider"></div>
+
         <p>1.Nanjing University Cloud scientific examination project on artificial intelligence technology application driven by both Chinese and British data knowledge</p>
 		<div class="image-grid">
             <div class="grid-item"><img src="../images/travel/nju1.jpg" alt="nju 1"></div>
